--- a/Design_Portfolio/shared.css
+++ b/Design_Portfolio/shared.css
@@ -123,10 +123,11 @@ hr{
 	}
 
 	#banner {
-		width:480px;
+		width:600px;
 		height: auto;
-		margin: 10px;
+		
 		display:flex;
+		justify-content: right;
 		
 		
 	}
@@ -265,3 +266,40 @@ img {vertical-align: middle;}
   transform: translateY(0);
   opacity: 1;
 }
+
+.descriptor {
+	display: flex;
+	justify-content: center;
+	margin-top: 100px;
+}
+.arrow {
+	width: 40px;
+}
+#item {
+	padding:10px;
+	background-color: #faaa8d;
+	border-radius: 5px;
+}
+
+	#row2{
+	 	display: flex;
+	 	justify-content: center; 
+	 	
+	}
+	#beforeafter {
+		width: 380px;
+	}
+.img-duo {
+	width:250px;
+	height:auto;
+	margin: 10px;
+}
+.DRAFT {
+		height: 450px;
+		
+	}
+
+	.drafty, #section-uno, #section-dos {
+		display: flex;
+		justify-content: center;
+	}
