--- a/Design_Portfolio/shared.css
+++ b/Design_Portfolio/shared.css
@@ -1,6 +1,17 @@
 body {
 		background-color: #f8f0e2;
 	}
+	.wire {
+	width: 80%;
+
+	margin:auto;
+}
+.section-wireframe {
+	
+	display:flex;
+	justify-content: center ;
+
+}
 
 	#navbar{
 		display: flex;
@@ -90,6 +101,13 @@ hr{
 		margin-left:10px;
 		margin-right: 10px;
 	}
+	.img-quad {
+	
+	height: 200px;
+		margin-left:10px;
+		margin-right: 10px;
+		margin-bottom: 20px;
+}
 
 
 .strip {
